# ircppbot

./: .gitignore  COPYING  DEV  MAKECONFIG.example  MODULES  Makefile.am  README  TODO  bot.sql  configure.ac  makefile  znc.conf
conf/: conf.ini.example
include/: Admin.h  AdminInterface.h  Authserv.h  Bot.h  Channel.h  ChannelAuth.h  ChannelBot.h  Channels.h  ConfigReader.h  Data.h  Global.h  IrcData.h  IrcSocket.h  ModuleBase.h  ModuleInterface.h  Nickserv.h  OCommands.h  Parse.h  ReadWriteMutex.h  Reply.h  ServerSocket.h  Support.h  Test.h  User.h  UserManagement.h  UserManagementInterface.h  Users.h  Znc.h
m4/: ax_cxx_compile_stdcxx_11.m4
man/: Makefile.am  ircppbot
mysql/: auths.sql  binds.sql  bot.sql  reply.sql
src/: Bot.cpp  Channel.cpp  ChannelAuth.cpp  Channels.cpp  ConfigReader.cpp  Data.cpp  Database.cpp  Global.cpp  IrcData.cpp  IrcSocket.cpp  Makefile.am  Parse.cpp  ReadWriteMutex.cpp  Reply.cpp  ServerSocket.cpp  Socket.cpp  User.cpp  Users.cpp  binds.cpp  bot.cpp  irc.cpp  ircdata.cpp  main.cpp  reply.cpp
src/core/: Bot.cpp  BotLib.cpp  ConfigReader.cpp  Data.cpp  Database.cpp  DatabaseData.cpp  Global.cpp  IrcData.cpp  ModuleBase.cpp  Output.cpp  Parse.cpp  Reply.cpp  main.cpp  reply.cpp
src/include/: UsersInterface.h  binds.h  bot.h  global.h  help.h  irc.h  ircdata.h  moduleinterface.h  reply.h
src/include/core/: Bot.h  BotLib.h  ConfigReader.h  Data.h  Database.h  DatabaseData.h  Global.h  IrcData.h  ModuleBase.h  Output.h  Parse.h  Reply.h  reply.h
src/include/interfaces/: AdminInterface.h  ChannelsInterface.h  ConfigReaderInterface.h  DataInterface.h  GlobalInterface.h  IrcDataInterface.h  IrcSocketInterface.h  ModuleInterface.h  ReplyInterface.h  UserManagementInterface.h  UsersInterface.h  WhoisDataContainerInterface.h  moduleinterface.h  replyinterface.h
src/include/management/: Auth.h  Channel.h  ChannelAuth.h  Channels.h  Nick.h  User.h  Users.h  Whois.h  WhoisDataContainer.h  auth.h  auths.h  channel.h  channels.h  management.h  managementscontainer.h  user.h  users.h
src/include/modules/: ModuleBase.h
src/include/modules/Support/: Support.h
src/include/modules/Test/: Test.h
src/include/modules/Znc/: Znc.h
src/include/modules/ircserv/: Authserv.h  UserManagement.h
src/include/socket/: IrcSocket.h  ServerSocket.h  Socket.h  SocketException.h
src/management/: Auth.cpp  Channel.cpp  ChannelAuth.cpp  Channels.cpp  Makefile.am  Nick.cpp  User.cpp  Users.cpp  Whois.cpp  WhoisDataContainer.cpp  auth.cpp  auths.cpp  channel.cpp  channels.cpp  management.cpp  user.cpp  users.cpp
src/modules/: Authserv.cpp  ChannelBot.cpp  MODULE_CONFIG  ModuleBase.cpp  Nickserv.cpp  OCommands.cpp  Support.cpp  Test.cpp  UserManagement.cpp  Znc.cpp  makefile
src/modules/Admin/: Admin.cpp
src/modules/ChannelBot/: ChannelBot.cpp  makefile
src/modules/ChannelBot/include/: ChannelBot.h
src/modules/OCommands/: OCommands.cpp  makefile
src/modules/OCommands/include/: OCommands.h
src/modules/Support/: Support.cpp  makefile
src/modules/Support/include/: Support.h
src/modules/Test/: Test.cpp  makefile
src/modules/Test/include/: Test.h
src/modules/Znc/: Znc.cpp  makefile
src/modules/Znc/include/: Znc.h
src/modules/ircserv/: Authserv.cpp  Nickserv.cpp  UserManagement.cpp  makefile
src/modules/ircserv/include/: Nickserv.h  UserManagement.h
src/modules/ircserv/src/: Authserv.cpp  Nickserv.cpp  UserManagement.cpp
src/modules/ircserv/src/include/: UserManagement.h
src/socket/: IrcSocket.cpp  ServerSocket.cpp  Socket.cpp
